<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Challeng 3</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="go_to_screen_2">Go To Screen 2</string>
    <string name="screen_1">Screen 1</string>
    <string name="screen_2">Screen 2</string>
    <string name="input_name">Masukkan Nama :</string>
    <string name="go_to_screen_3">Go To Screen 3</string>
    <string name="screen_3">Screen 3</string>
    <string name="go_to_screen_4">Go To Screen 4</string>
    <string name="screen_4">Screen 4</string>
    <string name="back_to_screen_3">Back To Screen 3</string>
    <string name="retired_age">Pensiun Umur Berapa :</string>
    <string name="die_age">Perkiraan meninggal umur :</string>
    <string name="outcome">Pengeluaran pertahun :  (dalam juta)</string>
    <string name="outcome2">Pengeluaran Anda:</string>
    <string name="die">Perkiraan Usia Anda Sampai:</string>
    <string name="retired">Anda ingin pensiun pada usia:</string>
    <string name="your_name">Nama Anda:</string>
    <string name="welcome">Haloo, Ada yang bisa dibantu??\nJika ingin konsultasi dana pensiun bisa lanjut ke Screen2</string>
    <string name="desc">awawkkwak</string>
    <string name="welcome2">Sebelumnya apakah saya boleh mengetahui nama Anda?</string>
    <string name="result">hasilnya adalah:</string>
</resources>